@@ -164,6 +164,8 @@ See L<Math::Prime::Util> for complete documentation.
   is_quasi_carmichael(n)              is n a quasi-Carmichael number
   is_primitive_root(r,n)              is r a primitive root mod n
   sqrtint(n)                          integer square root
+  rootint(n,k)                        integer k-th root
+  rootint(n,k,\$rk)                   as above but also set $rk to r^k
   logint(n,b)                         integer logarithm
   logint(n,b,\$be)                    as above but also set $be to b^e.
   gcd(@list)                          greatest common divisor
